syntax = "proto3";

package books;

option go_package = "dual-server-example/proto;books";

import "google/protobuf/empty.proto";

service BookService {
  rpc ListBooks (ListBooksRequest) returns (ListBooksResponse);
  rpc GetBook (GetBookRequest) returns (Book);
  rpc CreateBook (CreateBookRequest) returns (Book);
}

message Book {
  string book_id = 1;
  string title = 2;
  string author = 3;
}

message ListBooksRequest {
}

message ListBooksResponse {
  repeated Book books = 1;
}

message GetBookRequest {
  string book_id = 1;
}

message CreateBookRequest {
  Book book = 1;
}
